--- a/bower.json
+++ b/bower.json
@@ -52,7 +52,7 @@
     "drawio": "jgraph/drawio#v20.8.18",
     "js-base64": "^3.7.5",
     "pako": "^2.1.0",
-    "abdmob/x2js": "x2js#^1.2.0"
+    "x2js": "abdmob/x2js#^1.2.0"
   },
   "resolutions": {
     "bootstrap": "^v4.0.0",
