WIP play with open dialog

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "requirejs-plugins": "^1.0.2",
     "scrypt-async": "1.2.0",
     "sortablejs": "^1.6.0",
-    "drawio-cp": "github:cryptpad/drawio-npm#npm-21.7.5",
+    "drawio-cp": "../drawio-npm",
     "pako": "^2.1.0",
     "x2js": "^3.4.4"
   },
